criando as sessões, adicionando mais imagens e deixando o site responsivel para mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,111 @@
-$corDeFundo: #ed1717;
+@use 'variaveis';
+@use 'hero';
+@use 'trilogy';
+@use 'reviews';
+@use 'cast';
+
+@font-face {
+    font-family: Ringbearer;
+    src: url(../../assets/RINGM___.TTF);
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: Tolkien;
+    src: url(../../assets/tolkien.ttf);
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    list-style: none;
+    font-family: Tolkien, sans-serif;
+}
 
 body {
-    background-color: $corDeFundo;
+    background-color: variaveis.$corDeFundo;
+}
+
+@mixin text($fontSize: 24px) {
+    font-size: $fontSize;
+    line-height: $fontSize + 10px;
+    color: variaveis.$corDoTextoSecundario;
+}
+
+@mixin title($fontSize: 40px) {
+    @include text($fontSize);
+    font-family: Ringbearer, sans-serif;
+    color: variaveis.$corDoTitulo;
+}
+
+.text--big {
+    @include text(32px);
+
+    @media (max-width: 768px) {
+        @include text(20px)
+    }
+}
+
+.text {
+    @include text;
+
+    @media (max-width: 768px) {
+        @include text(16px)
+    }
+}
+
+.text--small {
+    @include text(16px);
+
+    @media (max-width: 768px) {
+        @include text(12px)
+    }
+}
+
+.title--big {
+    @include title(100px);
+
+    @media (max-width: 768px) {
+        @include title(50px)
+    }
+}
+
+.title {
+    @include title;
+
+    @media (max-width: 768px) {
+        @include title(24px)
+    }
+}
+
+.button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding:24px 40px;
+    background-color: variaveis.$corDeFundoBotao;
+    font-family: Tolkien, sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    color: variaveis.$corDoTitulo;
+    border: none;
+    text-decoration: none;
+    letter-spacing: 1px;
+    border-radius: 10px;
+
+    &:hover {
+        cursor: pointer;
+        background-color: lighten(variaveis.$corDeFundoBotao, 5%);
+    }
+
+    &--secundary {
+        background-color: variaveis.$corDeFundoBotaoSecundario;
+        color: #000;
+
+        &:hover {
+            background-color: lighten(variaveis.$corDeFundoBotaoSecundario, 6%);
+        }
+    }
 }
